cmake_minimum_required(VERSION 3.17)
project(workspaceClion)

set(CMAKE_CXX_STANDARD 14)

add_executable(01 01_global.cpp)
add_executable(02 02_heap.cpp)
add_executable(03 03_new.cpp)
add_executable(04 04_ref.cpp)
add_executable(05 05_fun.cpp)
add_executable(06 classAndObject/06_pack.cpp)
add_executable(07 classAndObject/07_cons.cpp)
add_executable(08 classAndObject/08_depth_cons.cpp)
add_executable(09 classAndObject/09_initList.cpp)
add_executable(10 classAndObject/10_objMem.cpp)
add_executable(11 classAndObject/11_statMem.cpp)
add_executable(12 classAndObject/12_clasStor.cpp)
add_executable(13 classAndObject/13_this.cpp)
add_executable(14 classAndObject/14_nullMem.cpp)
add_executable(15 classAndObject/15_consFun.cpp)
add_executable(16 friend/16_glofunc.cpp)
add_executable(17 friend/17_classf.cpp)
add_executable(18 friend/18_memFun.cpp)
#参数都不能是中文
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")