cmake_minimum_required(VERSION 3.17)
project(workspaceClion)

set(CMAKE_CXX_STANDARD 14)

add_executable(01 1_storeAndRef/01_global.cpp)
add_executable(02 1_storeAndRef/02_heap.cpp)
add_executable(03 1_storeAndRef/03_new.cpp)
add_executable(04 1_storeAndRef/04_ref.cpp)
add_executable(05 1_storeAndRef/05_fun.cpp)
add_executable(06 2_classAndObject/06_pack.cpp)
add_executable(07 2_classAndObject/07_cons.cpp)
add_executable(08 2_classAndObject/08_depth_cons.cpp)
add_executable(09 2_classAndObject/09_initList.cpp)
add_executable(10 2_classAndObject/10_objMem.cpp)
add_executable(11 2_classAndObject/11_statMem.cpp)
add_executable(12 2_classAndObject/12_clasStor.cpp)
add_executable(13 2_classAndObject/13_this.cpp)
add_executable(14 2_classAndObject/14_nullMem.cpp)
add_executable(15 2_classAndObject/15_consFun.cpp)
add_executable(16 3_friend/16_glofunc.cpp)
add_executable(17 3_friend/17_classf.cpp)
add_executable(18 3_friend/18_memFun.cpp)
add_executable(19 4_overload/19_plus.cpp)
add_executable(20 4_overload/20_lefshift.cpp)
add_executable(21 4_overload/21_increment.cpp)
add_executable(22 4_overload/22_value.cpp)
add_executable(23 4_overload/23_related.cpp)
add_executable(24 4_overload/24_evoke.cpp)
add_executable(25 6_multiState/25_concept.cpp)
add_executable(26 6_multiState/26_calculator.cpp)
add_executable(27 6_multiState/27_visualDestruction.cpp)
#参数都不能是中文
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")